[package]
name = "kcnprocessor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls", "rustls-tls-native-roots"] }
reqwest = {version = "0.13.4", features = ["native-tls"]}
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["raw_value"]}
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "chrono"] }
sha2 = "0.10.9"
hmac = "0.12.1"
base64 = "0.22"
futures-util = "0.3.32"
urlencoding = "2.1.3"
uuid = { version = "1.23", features = ["v4"] }
fastrand = "2.4.1"
smallvec = "1.15.1"
micromap = "0.3.0"
rust_decimal = "1.42.0"
dotenvy = "0.15.7"
bytes = "1.11.1"
