[package]
name = "kcnprocessor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.53", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls", "rustls-tls-native-roots"] }
reqwest = {version = "0.13.4", features = ["native-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["raw_value"]}
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "chrono"] }
sha2 = "0.11.0"
hmac = "0.13.0"
base64 = "0.22"
futures-util = "0.3.33"
urlencoding = "2.1.3"
uuid = { version = "1.24", features = ["v4"] }
fastrand = "2.5.0"
smallvec = "1.15.2"
micromap = "0.3.0"
rust_decimal = "1.42.1"
dotenvy = "0.15.7"
bytes = "1.12.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 0
