[package]
name = "kcnprocessor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.53", default-features = false, features = ["rt-multi-thread", "macros"]}
tokio-tungstenite = { version = "0.30", default-features = false, features = ["connect", "handshake"]}
reqwest = {version = "0.13", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = {version = "1.0", default-features = false, features = ["std"] }
sqlx = { version = "0.9", default-features = false, features = ["postgres", "runtime-tokio", "macros"]}
sha2 = { version = "0.11", default-features = false }
hmac = { version = "0.13", default-features = false }
base64 = { version = "0.22", default-features = false }
futures-util = { version = "0.3", default-features = false }
urlencoding = { version = "2.1", default-features = false }
uuid = { version = "1.24", default-features = false, features = ["v4", "std", "rng"] }
fastrand = { version = "2.5", default-features = false, features = ["std"]}
smallvec = { version = "1.15", default-features = false }
micromap = { version = "0.3", default-features = false }
rust_decimal = { version = "1.42", default-features = false }
dotenvy = { version = "0.15", default-features = false }
bytes = { version = "1.12", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter"] }
tracing-appender = { version = "0.2", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true

[profile.test]
inherits = "dev"
opt-level = 1